--- a/app/components/balance-donut/styles.scss
+++ b/app/components/balance-donut/styles.scss
@@ -6,7 +6,7 @@
 }
 
 .donut-title {
-  color: var(--body-color);
+  color: $body-color;
   font-size: 1.5rem;
   word-break: break-all;
   hyphens: auto;
@@ -38,7 +38,7 @@
 
   div:first-child:not(:last-child) {
     font-size: 60%;
-    color: color(var(--body-color) tint(30%));
+    color: lighten($body-color, 30%);
   }
 }
 
@@ -62,31 +62,31 @@
   }
 }
 
-@mixin donut-segment($color) {
-  stroke: var(--color-#{$color});
-  animation-name: donut-segment-#{$color};
+@mixin donut-segment($color-name, $color) {
+  stroke: $color;
+  animation-name: donut-segment-#{$color-name};
 
-  @keyframes donut-segment-#{$color} {
+  @keyframes donut-segment-#{$color-name} {
     from {
-      stroke: color(var(--color-#{$color}) shade(50%));
+      stroke: darken($color, 50%);
       stroke-dasharray: 0 100;
     }
   }
 }
 
 .donut-segment {
-  @include donut-segment('primary');
+  @include donut-segment('primary', $color-primary);
 
   animation-duration: 1s;
   animation-timing-function: ease-in-out;
 }
 
-&.success .donut-segment { @include donut-segment('success'); }
-&.info .donut-segment { @include donut-segment('info'); }
-&.warning .donut-segment { @include donut-segment('warning'); }
-&.danger .donut-segment { @include donut-segment('danger'); }
+&.success .donut-segment { @include donut-segment('success', $color-success); }
+&.info .donut-segment { @include donut-segment('info', $color-info); }
+&.warning .donut-segment { @include donut-segment('warning', $color-warning); }
+&.danger .donut-segment { @include donut-segment('danger', $color-danger); }
 
-@media (--lg-viewport) {
+@media #{$lg-viewport} {
   & {
     --max-offset: -90px;
   }
