--- a/app/components/progress-bar/styles.scss
+++ b/app/components/progress-bar/styles.scss
@@ -13,35 +13,35 @@
 }
 
 &.progress-bar::-webkit-progress-value {
-  background-color: var(--color-primary);
+  background-color: $color-primary;
 }
 
 &.progress-bar.success::-webkit-progress-value {
-  background-color: var(--color-success);
+  background-color: $color-success;
 }
 
 &.progress-bar.warning::-webkit-progress-value {
-  background-color: var(--color-warning);
+  background-color: $color-warning;
 }
 
 &.progress-bar.danger::-webkit-progress-value {
-  background-color: var(--color-danger);
+  background-color: $color-danger;
 }
 
 /* Firefox */
 
 &.progress-bar::-moz-progress-bar {
-  background-color: var(--color-primary);
+  background-color: $color-primary;
 }
 
 &.progress-bar.success::-moz-progress-bar {
-  background-color: var(--color-success);
+  background-color: $color-success;
 }
 
 &.progress-bar.warning::-moz-progress-bar {
-  background-color: var(--color-warning);
+  background-color: $color-warning;
 }
 
 &.progress-bar.danger::-moz-progress-bar {
-  background-color: var(--color-danger);
+  background-color: $color-danger;
 }
