--- a/app/components/statistic-list/bar/styles.scss
+++ b/app/components/statistic-list/bar/styles.scss
@@ -12,7 +12,7 @@
     width: 100%;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
-    background-color: var(--color-primary);
+    background-color: $color-primary;
 
     transform: translateX(calc((1 - var(--value)) * -100%));
 
