--- a/app/components/sy-calendar/styles.scss
+++ b/app/components/sy-calendar/styles.scss
@@ -2,7 +2,7 @@
   @include ember-power-calendar($cell-size: 35px);
 
   .ember-power-calendar-nav-control {
-    color: var(--color-primary);
+    color: $color-primary;
     cursor: pointer;
 
   }
@@ -23,23 +23,23 @@
     transition: background-color 300ms ease, color 300ms ease;
 
     &--focused {
-      box-shadow: inset 0 -2px 0 0 var(--color-primary);
+      box-shadow: inset 0 -2px 0 0 $color-primary;
     }
 
     &--selected {
       color: rgb(255,255,255);
-      background-color: color(var(--color-primary) tint(20%));
+      background-color: lighten($color-primary, 20%);
 
       &:hover {
         color: rgb(255,255,255);
-        background-color: color(var(--color-primary) tint(30%));
+        background-color: lighten($color-primary, 30%);
       }
     }
   }
 }
 
 &.sy-datepicker {
-  border: 1px solid var(--color-border);
+  border: 1px solid $color-border;
   padding: 0.5rem;
   box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
 }
