--- a/app/components/sy-topnav/styles.scss
+++ b/app/components/sy-topnav/styles.scss
@@ -8,7 +8,7 @@
   margin-right: .3rem;
 }
 
-@media (--nav-top-mobile-width) {
+@media #{$nav-top-mobile-width} {
   .nav-top-header-title {
     display: block;
   }
@@ -16,16 +16,16 @@
   .nav-top-header-title-version {
     color: rgb(150,150,150);
     font-size: .5rem;
-    font-family: var(--font-family-mono);
+    font-family: $font-family-mono;
   }
 
   .nav-top-list-item a.active {
-    background-color: var(--color-primary);
+    background-color: $color-primary;
     color: #fff;
   }
 
   .nav-top-list-item a:hover {
-    background-color: color(var(--color-primary) tint(20%));
+    background-color: lighten($color-primary, 20%);
     color: #fff;
   }
 
