--- a/app/components/task-selection/template.hbs
+++ b/app/components/task-selection/template.hbs
@@ -8,7 +8,7 @@
     allowClear         = true
     tagName            = 'div'
     class              = 'customer-select'
-    onChange           = (action (mut customer))
+    onchange           = (action (mut customer))
     extra              = (hash
       lazy             = true
       selectedTemplate = selectedTemplate
@@ -24,7 +24,7 @@
     allowClear         = true
     tagName            = 'div'
     class              = 'project-select'
-    onChange           = (action (mut project))
+    onchange           = (action (mut project))
     extra              = (hash
       selectedTemplate = selectedTemplate
       optionTemplate   = projectOptionTemplate
@@ -39,7 +39,7 @@
     allowClear         = true
     tagName            = 'div'
     class              = 'task-select'
-    onChange           = (action (mut task))
+    onchange           = (action (mut task))
     extra              = (hash
       selectedTemplate = selectedTemplate
       optionTemplate   = taskOptionTemplate
