--- a/app/styles/badge.scss
+++ b/app/styles/badge.scss
@@ -3,33 +3,33 @@
   min-width: 10px;
   padding: 0.2rem 0.4rem;
   margin-left: 0.2rem;
-  font-size: calc(var(--font-size-base) * 0.8);
+  font-size: $font-size-base * 0.8;
   line-height: 1;
   color: rgb(255,255,255);
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
-  background-color: var(--color-secondary);
+  background-color: $color-secondary;
   border-radius: 10px;
 }
 
 a.active .badge,
 .badge--primary {
-  background-color: var(--color-primary);
+  background-color: $color-primary;
 }
 
 .badge--success {
-  background-color: var(--color-success);
+  background-color: $color-success;
 }
 
 .badge--info {
-  background-color: var(--color-info);
+  background-color: $color-info;
 }
 
 .badge--warning {
-  background-color: var(--color-warning);
+  background-color: $color-warning;
 }
 
 .badge--danger {
-  background-color: var(--color-danger);
+  background-color: $color-danger;
 }
