--- a/app/styles/filter-sidebar.scss
+++ b/app/styles/filter-sidebar.scss
@@ -32,7 +32,7 @@
   display: flex;
   flex-shrink: 0;
   justify-content: space-between;
-  border-bottom: 1px solid var(--color-border);
+  border-bottom: 1px solid $color-border;
   font-weight: 700;
 }
 
@@ -68,7 +68,7 @@
 
 .filter-sidebar-toggle-background {
   width: 100%;
-  background-color: var(--color-primary);
+  background-color: $color-primary;
   box-shadow: 0 0 10px rgba(0,0,0,.2);
   border-top-left-radius: .3rem;
   border-bottom-left-radius: .3rem;
@@ -90,7 +90,7 @@
   right: .5rem;
   font-size: .6rem;
   font-weight: bold;
-  background-color: var(--color-success);
+  background-color: $color-success;
   padding: .1rem .3rem;
   border-radius: 50%;
   box-shadow: 0 0 10px rgba(0,0,0,.2);
