--- a/app/styles/loader.scss
+++ b/app/styles/loader.scss
@@ -15,7 +15,7 @@
   left: -200px;
   width: 200px;
   height: 4px;
-  background-color: var(--color-primary);
+  background-color: $color-primary;
   animation: loading 2s linear infinite;
 }
 
