--- a/app/styles/tour.scss
+++ b/app/styles/tour.scss
@@ -1,9 +1,9 @@
 div.hopscotch-bubble {
   z-index: 99; // The dropdowns have 100 and we don't want to hide them
-  border: 1px solid var(--color-border);
-  border-color: color(var(--color-primary) tint(20%));
+  border: 1px solid $color-border;
+  border-color: lighten($color-primary, 20%);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset,
-              0 0   8px color(var(--color-primary) a(60%));
+              0 0   8px opacify($color-primary, 0.6);
 
   .hopscotch-bubble-number {
     display: none;
@@ -15,7 +15,7 @@ div.hopscotch-bubble {
 
   .hopscotch-title,
   .hopscotch-content {
-    color: var(--body-color);
+    color: $body-color;
   }
 
   .hopscotch-title {
@@ -42,7 +42,7 @@ div.hopscotch-bubble {
       }
 
       .hopscotch-bubble-arrow-border {
-        border-bottom-color: color(var(--color-primary) tint(20%));
+        border-bottom-color: lighten($color-primary, 20%);
       }
     }
 
@@ -54,7 +54,7 @@ div.hopscotch-bubble {
       }
 
       .hopscotch-bubble-arrow-border {
-        border-top-color: color(var(--color-primary) tint(20%));
+        border-top-color: lighten($color-primary, 20%);
       }
     }
 
@@ -66,7 +66,7 @@ div.hopscotch-bubble {
       }
 
       .hopscotch-bubble-arrow-border {
-        border-right-color: color(var(--color-primary) tint(20%));
+        border-right-color: lighten($color-primary, 20%);
       }
     }
 
@@ -78,7 +78,7 @@ div.hopscotch-bubble {
       }
 
       .hopscotch-bubble-arrow-border {
-        border-left-color: color(var(--color-primary) tint(20%));
+        border-left-color: lighten($color-primary, 20%);
       }
     }
   }
