--- a/app/styles/users-navigation.scss
+++ b/app/styles/users-navigation.scss
@@ -1,6 +1,6 @@
 .user-navigation {
-  margin: 0 calc(var(--page-padding-h) * -1);
-  border-bottom: 1px solid var(--color-border);
+  margin: 0 ($page-padding-h * -1);
+  border-bottom: 1px solid $color-border;
   background-color: rgb(255,255,255);
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 }
@@ -26,24 +26,24 @@
 }
 
 .user-navigation > ul > li > a.active {
-  color: var(--color-primary);
-  box-shadow: inset 0 -2px 0 var(--color-primary);
+  color: $color-primary;
+  box-shadow: inset 0 -2px 0 $color-primary;
 }
 
-@media (--md-viewport) {
+@media #{$md-viewport} {
   .user-navigation > ul > li {
     flex-grow: 0;
   }
 }
 
-@media (--lg-viewport) {
+@media #{$lg-viewport} {
   .user-navigation {
-    margin: 0 calc(var(--page-padding-h) * 1.25 * -1);
+    margin: 0 ($page-padding-h * 1.25 * -1);
   }
 }
 
-@media (--xl-viewport) {
+@media #{$xl-viewport} {
   .user-navigation{
-    margin: 0 calc(var(--page-padding-h) * 1.5 * -1);
+    margin: 0 ($page-padding-h * 1.5 * -1);
   }
 }
