--- a/app/styles/users.scss
+++ b/app/styles/users.scss
@@ -1,22 +1,22 @@
-.user-header {
-  --user-header-padding-v: 0.5rem;
-  --user-header-padding-h: var(--page-padding-h);
-  --user-header-margin-top-extra: 0px;
+$user-header-padding-v: 0.5rem;
+$user-header-padding-h: $page-padding-h;
+$user-header-margin-top-extra: 0px;
 
+.user-header {
   display: flex;
   flex-shrink: 0;
   flex-direction: column;
   position: relative;
 
-  margin: calc(var(--page-padding-v) * -1 + var(--user-header-margin-top-extra)) calc(var(--page-padding-h) * -1) 0;
-  padding: var(--user-header-padding-v) var(--user-header-padding-h);
+  margin: calc(#{$page-padding-v} * -1 + #{$user-header-margin-top-extra}) calc(#{$page-padding-h} * -1) 0;
+  padding: $user-header-padding-v $user-header-padding-h;
 
   background-color: rgb(240, 240, 240);
-  border-bottom: 1px solid var(--color-border);
-}
+  border-bottom: 1px solid $color-border;
 
-.nav-top--fixed + .user-header {
-  --user-header-margin-top-extra: 51px;
+  .nav-top--fixed + & {
+    $user-header-margin-top-extra: 51px !global;
+  }
 }
 
 .user-content {
@@ -24,7 +24,7 @@
   flex-grow: 1;
   flex-shrink: 0;
   flex-direction: column;
-  padding-top: var(--page-padding-v);
+  padding-top: $page-padding-v;
   position: relative;
 
   .grid {
@@ -42,7 +42,7 @@
   }
 
   h4 {
-    color: var(--body-color);
+    color: $body-color;
     font-weight: 300;
     line-height: 3rem;
   }
@@ -87,7 +87,7 @@
 
   h1 {
     display: inline-flex;
-    color: var(--color-body);
+    color: $body-color;
     font-size: 3.5rem;
     line-height: 3.5rem;
     margin: 0;
@@ -120,7 +120,7 @@
   margin: 1.5rem 0;
   text-transform: uppercase;
   text-align: center;
-  color: color(var(--color-border) shade(20%));
+  color: darken($color-border, 20%);
 }
 
 .user-header-worktime-balance {
@@ -149,7 +149,7 @@
     font-weight: 300;
     margin: 0;
     text-transform: uppercase;
-    color: color(var(--color-border) shade(20%));
+    color: darken($color-border, 20%);
   }
 }
 
@@ -171,7 +171,7 @@
   text-align: center;
 }
 
-@media (--sm-viewport) {
+@media #{$sm-viewport} {
   .user-header-absence-balance {
     flex-basis: 100px;
   }
@@ -207,7 +207,7 @@
   }
 }
 
-@media (--md-viewport) {
+@media #{$md-viewport} {
   .user-header-info {
     h1 {
       font-size: 3rem;
@@ -216,14 +216,14 @@
   }
 }
 
-@media (--lg-viewport) {
+@media #{$lg-viewport} {
   .user-header {
-    margin: calc(var(--page-padding-v) * 1.25 * -1 + var(--user-header-margin-top-extra)) calc(var(--page-padding-h) * 1.25 * -1) 0;
-    padding: calc(var(--user-header-padding-v) * 1.25) calc(var(--user-header-padding-h) * 1.25);
+    margin: calc(#{$page-padding-v} * 1.25 * -1 + #{$user-header-margin-top-extra}) calc(#{$page-padding-h} * 1.25 * -1) 0;
+    padding: calc(#{$user-header-padding-v} * 1.25) calc(#{$user-header-padding-h} * 1.25);
   }
 
   .user-content {
-    padding-top: calc(var(--page-padding-v) * 1.25);
+    padding-top: $page-padding-v * 1.25;
 
     .year-select select {
       width: 5rem;
@@ -235,14 +235,14 @@
   }
 }
 
-@media (--xl-viewport) {
+@media #{$xl-viewport} {
   .user-header {
-    margin: calc(var(--page-padding-v) * 1.5 * -1 + var(--user-header-margin-top-extra)) calc(var(--page-padding-h) * 1.5 * -1) 0;
-    padding: calc(var(--user-header-padding-v) * 1.5) calc(var(--user-header-padding-h) * 1.5);
+    margin: calc(#{$page-padding-v} * 1.5 * -1 + #{$user-header-margin-top-extra}) calc(#{$page-padding-h} * 1.5 * -1) 0;
+    padding: calc(#{$user-header-padding-v} * 1.5) calc(#{$user-header-padding-h} * 1.5);
   }
 
   .user-content {
-    padding-top: calc(var(--page-padding-v) * 1.5);
+    padding-top: $page-padding-v * 1.5;
   }
 
   .user-header-absence-balance {
