--- a/app/index/reports/template.hbs
+++ b/app/index/reports/template.hbs
@@ -1,5 +1,5 @@
 <div class="btn-toolbar btn-toolbar--right form-group">
-  <button type="button" class="btn btn-success" title="Move all entries to another date" {{action (mut showReschedule) true}}>Reschedule</button>
+  <button type="button" class="btn btn-success" title="Move all entries to another date" data-test-report-reschedule {{action (mut showReschedule) true}}>Reschedule</button>
 </div>
 
 <div class="form-list form-list--reports">
@@ -36,6 +36,6 @@
     {{/power-calendar}}
   {{/modal.body}}
   {{#modal.footer}}
-    <button type="submit" class="btn btn-primary" {{action 'reschedule' rescheduleDate}}>Save</button>
+    <button type="submit" class="btn btn-primary" data-test-report-save {{action 'reschedule' rescheduleDate}}>Save</button>
   {{/modal.footer}}
 {{/sy-modal}}
