--- a/app/users/edit/credits/overtime-credits/edit/template.hbs
+++ b/app/users/edit/credits/overtime-credits/edit/template.hbs
@@ -8,7 +8,7 @@
       <div class="grid-cell">
         {{#validated-form
           model     = (changeset credit OvertimeCreditValidations)
-          on-submit = save
+          on-submit = (perform save)
         as |f|}}
         <h4 class="text-center">{{if credit.isNew 'New' 'Edit'}} overtime credit</h4>
           <div class="card">
@@ -23,9 +23,9 @@
               <div class="text-right">
                 {{#link-to 'users.edit.credits.index' user.id class='btn'}}Cancel{{/link-to}}
                 {{#unless credit.isNew}}
-                  <button type="button" class="btn btn-danger {{if delete.isRunning 'loading'}}" {{action (perform delete) credit}}>Delete</button>
+                  <button type="button" class="btn btn-danger {{if delete.isRunning 'loading'}}" {{action (perform delete) credit}} data-test-overtime-credit-delete>Delete</button>
                 {{/unless}}
-                {{f.submit disabled=f.model.isInvalid}}
+                {{f.submit data-test-overtime-credit-save disabled=f.model.isInvalid}}
               </div>
             </div>
           </div>
