--- a/app/components/welcome-modal/template.hbs
+++ b/app/components/welcome-modal/template.hbs
@@ -7,8 +7,28 @@
     </div>
   {{/modal.body}}
   {{#modal.footer}}
-    <button type="button" class="btn btn-never" {{action on-never}}>Never</button>
-    <button type="button" class="btn btn-default" {{action on-later}}>Later</button>
-    <button type="submit" class="btn btn-primary" {{action on-start}}>Sure</button>
+    <button
+      type="button"
+      class="btn btn-never"
+      data-test-tour-never
+      {{action on-never}}>
+      Never
+    </button>
+
+    <button
+      type="button"
+      class="btn btn-default"
+      data-test-tour-later
+      {{action on-later}}>
+      Later
+    </button>
+
+    <button
+      type="submit"
+      class="btn btn-primary"
+      data-test-tour-start
+      {{action on-start}}>
+      Sure
+    </button>
   {{/modal.footer}}
 {{/sy-modal}}
