fix: corrections from code-review

--- a/app/index/attendances/template.hbs
+++ b/app/index/attendances/template.hbs
@@ -18,8 +18,9 @@
         <tbody>
           {{#each attendances as |attendance|}}
             {{#with (changeset attendance AttendanceValidator) as |model|}}
-              <tr data-test-attendance-slider
-                  data-test-attendance-slider-id={{attendance.id}}>
+              <tr
+                data-test-attendance-slider
+                data-test-attendance-slider-id={{attendance.id}}>
                 <td>
                   {{sy-timepicker value=model.from on-change=(action (mut model.from))}}
                 </td>
