--- a/app/index/activities/template.hbs
+++ b/app/index/activities/template.hbs
@@ -19,10 +19,10 @@
         <tbody>
           {{#each sortedActivities as |activity|}}
           <tr
-             title={{unless activity.transferred "Click to edit"}}
+            title={{unless activity.transferred "Click to edit"}}
             data-test-activity-row
             data-test-activity-row-id={{activity.id}}
-            class="{{if activity.transferred 'transferred' 'pointer'}} {{if activity.active 'primary'}}"
+            class="{{if activity.transferred 'transferred' 'pointer'}} {{if activity.active 'primary'}} {{if (eq activity.id editId) 'selected'}}"
             {{action 'editActivity' activity}}
           >
               <td>
