--- a/app/components/sy-topnav/template.hbs
+++ b/app/components/sy-topnav/template.hbs
@@ -24,10 +24,6 @@
         {{#link-to 'analysis'}}
           {{fa-icon 'line-chart'}} Analysis
         {{/link-to}}
-
-        {{#link-to "analysis.index" (query-params fromDate=analysisFromDate verified="0")}}
-          Lorem ipsum
-        {{/link-to}}
       </li>
       <li class="nav-top-list-item">
         {{#link-to 'statistics'}}
@@ -44,6 +40,7 @@
     {{/if}}
   </ul>
   <ul class="nav-top-list nav-top-list--right">
+    {{report-review-warning}}
     <li class="nav-top-list-item">
       {{#link-to 'users.edit' session.data.user.id}}
         {{fa-icon 'user'}} {{session.data.user.fullName}}
