feat(projects): Add route and view

--- a/app/components/sy-topnav/template.hbs
+++ b/app/components/sy-topnav/template.hbs
@@ -30,6 +30,11 @@
           {{fa-icon 'bar-chart'}} Statistics
         {{/link-to}}
       </li>
+      <li class="nav-top-list-item">
+        {{#link-to 'projects'}}
+          {{fa-icon 'briefcase'}} Projects
+        {{/link-to}}
+      </li>
     {{/unless}}
     {{#if session.data.user.isSuperuser}}
       <li class="nav-top-list-item">
