--- a/app/projects/template.hbs
+++ b/app/projects/template.hbs
@@ -4,76 +4,91 @@
     <h4>You do not have the permission to access this page</h4>
   </div>
 {{else}}
-  <h1>Projects</h1>
+  <div class="header">
     {{#power-select
       options=projects
+      placeholder="Select project..."
+      searchField="name"
       onchange=(action (queue (action (mut selectedProject)) (perform fetchTasksOfProject)))
       selected=selectedProject
       as |project|
     }}
       {{project.name}}
     {{/power-select}}
-  <br>
+  </div>
   {{#if selectedProject}}
-    <h2>Tasks</h2>
-    <table class="table table--striped table--analysis">
-      <colgroup>
-        <col>
-        <col>
-        <col>
-        <col>
-      </colgroup>
-      <thead>
-      <tr>
-        <th>Name</th>
-        <th>Reference</th>
-        <th>Estimated time</th>
-        <th>Archived</th>
-      </tr>
-      </thead>
-      <tbody>
-      {{#each fetchTasksOfProject.lastSuccessful.value as |task|}}
-        <tr class="pointer" {{action "onSelectTask" task}}>
-          <td>{{task.name}}</td>
-          <td>{{task.reference}}</td>
-          <td>{{if task.estimatedTime (moment-duration task.estimatedTime "hours") "-"}}</td>
-          <td>{{sy-checkmark checked=task.archived}}</td>
-        </tr>
-      {{/each}}
-      </tbody>
-    </table>
-    <br>
+    <h3>
+      <span class="header-left">
+        Tasks
+      </span>
+      <span class="header-right">
+        <button class="btn btn-primary" {{action (perform createTask)}}>New</button>
+      </span>
+    </h3>
+    <div style="height: 400px; margin-bottom: 20px">
+      {{#ember-scrollable class='projects-scrollable-container'}}
+        <table class="table table--striped table--projects">
+          <colgroup>
+            <col>
+            <col>
+            <col>
+            <col>
+          </colgroup>
+          <thead>
+          <tr>
+            <th>Name</th>
+            <th>Reference</th>
+            <th>Estimated time</th>
+            <th>Archived</th>
+          </tr>
+          </thead>
+          <tbody>
+          {{#each tasks as |task|}}
+            <tr class="pointer {{if (eq selectedTask task) "selected"}}" {{action (mut selectedTask) task}}>
+              <td>{{task.name}}</td>
+              <td>{{if task.reference task.reference "-"}}</td>
+              <td>{{if task.estimatedTime (moment-duration task.estimatedTime "hours") "-"}}</td>
+              <td>{{sy-checkmark checked=task.archived}}</td>
+            </tr>
+          {{/each}}
+          </tbody>
+        </table>
+      {{/ember-scrollable}}
+    </div>
     {{#if selectedTask}}
-      <h3>Edit {{selectedTask.name}}</h3>
-      {{#validated-form
-        model     = (changeset selectedTask)
-        on-submit = (perform saveTask)
+      <h2>{{if selectedTask.isNew "Add task" (concat "Edit " selectedTask.name)}}</h2>
+        {{#validated-form
+          model     = (changeset selectedTask)
+          on-submit = (perform saveTask)
         as |f|}}
-        <div class="row">
-          <div class="column">
-            {{f.input label="Name" name="name" required=true}}
-            {{f.input label="Reference" name="reference" required=false}}
-          </div>
-          <div class="column">
-            {{#f.input name='estimatedTime' as |fi|}}
-              <label>
-                Estimated time
-              </label>
-              {{sy-durationpicker value=fi.value on-change=fi.update}}
-            {{/f.input}}
+          <div class="row">
+            <div class="column">
+              {{f.input label="Name" name="name" required=true}}
+              {{f.input label="Reference" name="reference" required=false}}
+            </div>
+            <div class="column">
+              {{#f.input name='estimatedTime' as |fi|}}
+                <label>
+                  Estimated time
+                </label>
+                {{sy-durationpicker value=fi.value on-change=fi.update}}
+              {{/f.input}}
 
-            {{#f.input name='archived' as |fi|}}
-              <label>
-                Archived
-              </label>
-              {{sy-checkbox value=fi.value on-change=fi.update}}
-            {{/f.input}}
+              {{#f.input name='archived' as |fi|}}
+                <label>
+                  Archived
+                </label>
+                {{sy-checkbox value=fi.value on-change=fi.update}}
+              {{/f.input}}
+            </div>
           </div>
-        </div>
-        {{f.submit label="Save"}}
-      {{/validated-form}}
+          <div class="btn-toolbar btn-toolbar--right">
+            <button class="btn btn-primary" {{action (mut selectedTask) null}}>Cancel</button>
+            {{f.submit label="Save"}}
+          </div>
+        {{/validated-form}}
     {{/if}}
   {{else}}
-    <p class="center">{{fa-icon "search"}} Please select a project</p>
+    <div class="text-center"><em>No project selected</em></div>
   {{/if}}
 {{/if}}
