--- a/app/projects/template.hbs
+++ b/app/projects/template.hbs
@@ -1,40 +1,35 @@
 {{#if (not hasAccess)}}
-  <div class="text-center">
+  <div class="text-center" data-test-access-forbidden>
     <h1>Access forbidden</h1>
     <h4>You do not have the permission to access this page</h4>
   </div>
 {{else}}
-  <div class="header">
-    {{#power-select
-      options=projects
-      placeholder="Select project..."
-      searchField="name"
-      onchange=(action (queue (action (mut selectedProject)) (perform fetchTasksOfProject)))
-      selected=selectedProject
-      allowClear=true
-      as |project|
-    }}
-      {{project.name}}
-    {{/power-select}}
-  </div>
+  {{#power-select
+    data-test-project-selection
+    tagName="div"
+    class="header"
+    options=projects
+    placeholder="Select project..."
+    searchField="name"
+    onchange=(action (queue (action (mut selectedProject)) (perform fetchTasksOfProject)))
+    selected=selectedProject
+    allowClear=true
+    as |project|
+  }}
+    {{project.name}}
+  {{/power-select}}
   {{#if selectedProject}}
     <h3>
       <span class="header-left">
-        {{selectedProject.name}} Tasks
+        Tasks of {{selectedProject.name}}
       </span>
       <span class="header-right">
-        <button class="btn btn-primary" {{action (perform createTask)}}>New</button>
+        <button class="btn btn-primary" {{action (perform createTask)}} data-test-add-task>Add Task</button>
       </span>
     </h3>
-    <div style="height: 400px; margin-bottom: 20px">
+    <div class="task-table-container">
       {{#ember-scrollable class='projects-scrollable-container'}}
-        <table class="table table--striped table--projects">
-          <colgroup>
-            <col>
-            <col>
-            <col>
-            <col>
-          </colgroup>
+        <table class="table table--striped table--projects" data-test-tasks-table>
           <thead>
           <tr>
             <th>Name</th>
@@ -45,11 +40,11 @@
           </thead>
           <tbody>
           {{#each tasks as |task|}}
-            <tr class="pointer {{if (eq selectedTask task) "selected"}}" {{action (mut selectedTask) task}}>
-              <td>{{task.name}}</td>
-              <td>{{if task.reference task.reference "-"}}</td>
-              <td>{{if task.estimatedTime (moment-duration task.estimatedTime "hours") "-"}}</td>
-              <td>{{sy-checkmark checked=task.archived}}</td>
+            <tr class="pointer {{if (eq selectedTask task) "selected"}}" {{action (mut selectedTask) task}} data-test-task-table-row>
+              <td data-test-table-name>{{task.name}}</td>
+              <td data-test-table-reference>{{if task.reference task.reference "-"}}</td>
+              <td data-test-table-estimated-time>{{if task.estimatedTime (humanize-duration task.estimatedTime) "-"}}</td>
+              <td>{{sy-checkmark data-test-table-archived checked=task.archived}}</td>
             </tr>
           {{/each}}
           </tbody>
@@ -57,39 +52,64 @@
       {{/ember-scrollable}}
     </div>
     {{#if selectedTask}}
+      <div class="task-form-container" data-test-task-form>
       <h2>{{if selectedTask.isNew "Add task" selectedTask.name}}</h2>
         {{#validated-form
           model     = (changeset selectedTask TaskValidations)
           on-submit = (perform saveTask)
         as |f|}}
-          <div class="row">
-            <div class="column">
-              {{f.input label="Name" name="name" required=true}}
-              {{f.input label="Reference" name="reference" required=false}}
+          <div class="task-form-container-row">
+            <div class="task-form-container-column">
+              {{f.input
+                data-test-name
+                label="Name"
+                name="name"
+                required=true
+              }}
+              {{f.input
+                data-test-reference
+                label="Reference"
+                name="reference"
+                required=false
+              }}
             </div>
-            <div class="column">
+            <div class="task-form-container-column">
               {{#f.input name='estimatedTime' as |fi|}}
                 <label>
                   Estimated time
                 </label>
-                {{sy-durationpicker value=fi.value on-change=fi.update}}
+                {{sy-durationpicker
+                  data-test-estimated-time
+                  value=fi.value
+                  on-change=fi.update
+                }}
               {{/f.input}}
 
-              {{#f.input name='archived' as |fi|}}
+              {{#f.input data-test-archived name='archived' as |fi|}}
                 <label>
                   Archived
                 </label>
-                {{sy-checkbox value=fi.value on-change=fi.update}}
+                {{sy-checkbox
+                  checked=selectedTask.archived
+                  value=fi.value
+                  on-change=fi.update
+                }}
               {{/f.input}}
             </div>
           </div>
           <div class="btn-toolbar btn-toolbar--right">
-            <button class="btn btn-primary" {{action (mut selectedTask) null}}>Cancel</button>
-            {{f.submit label="Save" disabled=f.model.isInvalid}}
+            <button class="btn btn-primary" {{action (mut selectedTask) null}} data-test-cancel>Cancel</button>
+            {{f.submit data-test-save disabled=f.model.isInvalid}}
           </div>
         {{/validated-form}}
+      </div>
     {{/if}}
   {{else}}
-    <div class="text-center"><em>No project selected</em></div>
+    <div class="empty" data-test-no-project-selected>
+      <div>
+        {{fa-icon 'search'}}
+        <h3>No project selected</h3>
+      </div>
+    </div>
   {{/if}}
 {{/if}}
