--- a/app/styles/progress-tooltip.scss
+++ b/app/styles/progress-tooltip.scss
@@ -28,7 +28,7 @@ $progress-tooltip-color: rgb(87,87,87);
 
     .time-info-percentage {
       display: flex;
-      align-items: center;
+      align-items: flex-start;
       padding-left: 1rem;
     }
   }
