--- a/timed/templates/login.html
+++ b/timed/templates/login.html
@@ -29,6 +29,7 @@
 </p>
 {% endif %}
 
+{% if show_local_login %}
 <form action="{{ app_path }}" method="post" id="login-form">{% csrf_token %}
   <div class="form-row">
     {{ form.username.errors }}
@@ -49,14 +50,18 @@
     <label>&nbsp;</label><input type="submit" value="{% trans 'Log in' %}">
   </div>
 </form>
+<hr style="margin:5px 0">
+{% endif %}
 
 {% if user.is_authenticated %}
-  <p>Current user: {{ user.email }}</p>
+  <p>{% trans 'Current user:' %} {{ user.email }}</p>
   <form action="{% url 'oidc_logout' %}" method="post">
     <input type="submit" value="logout">
   </form>
 {% else %}
-  <a href="{% url 'oidc_authentication_init' %}">Login with SSO</a>
+<form action="{% url 'oidc_authentication_init' %}">
+  <input type="submit" value="{% trans 'Login with SSO' %}">
+</form>
 {% endif %}
 
 </div>
