--- a/app/statistics/template.hbs
+++ b/app/statistics/template.hbs
@@ -158,6 +158,21 @@
             on-change = (action (mut verified))
           }}
         {{/fs.label}}
+        {{#fs.label}}
+          Billed
+          {{fs.filter 'button'
+            data-test-filter-billed
+            selected  = billed
+            valuePath = 'value'
+            labelPath = 'label'
+            options = (array
+              (hash label='All' value='')
+              (hash label='Billed' value='1')
+              (hash label='Not Billed' value='0')
+            )
+            on-change = (action (mut billed))
+          }}
+        {{/fs.label}}
       {{/fs.group}}
     {{/filter-sidebar}}
   {{/task-selection}}
