--- a/app/components/report-row/template.hbs
+++ b/app/components/report-row/template.hbs
@@ -26,7 +26,7 @@
 </div>
 <div class="form-list-cell form-group">
   {{#if editable}}
-    <button type="button" data-test-delete-report class="btn btn-danger" {{action 'delete'}}>{{fa-icon 'trash'}}</button>
+    <button type="button" data-test-delete-report class="btn btn-danger" disabled={{report.verifiedBy.id}} {{action 'delete'}}>{{fa-icon 'trash'}}</button>
     <button type="submit" data-test-save-report class="btn btn-primary" disabled={{or (not changeset.isDirty) (not changeset.isValid)}} {{action 'save'}}>{{fa-icon 'save'}}</button>
   {{/if}}
 </div>
